--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ button {
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s, background 0.3s;
+  transition: transform 0.2s, box-shadow 0.2s, backgreound 0.3s;
   width: 100%;
 }
 
